--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,2 @@
-[[redirects]]
-  from = "/get_answer"
-  to = "https://romance-magic-conch.netlify.app/get_answer"
-  status = 200
-  force = true
+[build]
+  functions = "netlify/functions"
